# aquarium

./: .gitignore  README.md
client/: CMakeLists.txt  Makefile  affichage.cfg
client/src/: Fish.cpp  Fish.hpp  Position.hpp  Server.cpp  Server.hpp  global.hpp  main.cpp
server/: CMakeLists.txt  controller.cfg
server/src/: config.h  couple.h  dot_parser.c  dot_parser.h  duck.c  duck.h  err_exit.c  err_exit.h  fish.c  fish.h  graph.c  graph.h  list.c  list.h  main.c  platypus.c  platypus.h  position.c  position.h  server.c
server/tst/: ctest.h  dot_parser.c  duck.c  graph.c  list.c
server/tst/parsing-test-files/: get_aquarium_name.txt  get_next_block.txt  link.txt  load.dot  node.txt
